--- a/1-天天生鲜网页前端设计/css/main.css
+++ b/1-天天生鲜网页前端设计/css/main.css
@@ -121,3 +121,104 @@ body{
 	color: #fff;
 	text-align: center;
 }
+
+.sub_menu_con{
+	height: 40px;
+	border-bottom: 2px solid #37ab40;
+}
+
+.sub_menu{
+	width: 1200px;
+	height: 40px;
+	margin: 0 auto;
+}
+
+.sub_menu h1{
+	width: 200px;
+	height: 40px;
+	background-color: #37ab40;
+	font: 14px/40px "Microsoft Yahei";
+	color: #fff;
+	text-align: center;
+}
+
+.sub_menu ul{
+	overflow: hidden;
+}
+
+.sub_menu li{
+	float: left;
+	height: 14px;
+	padding: 0 25px;
+	border-left: 1px solid #666;
+	margin-left: -1px;
+	margin-top: 13px;
+}
+
+.sub_menu li a{
+	font: 14px/14px "Microsoft Yahei";
+	color: #666;
+}
+
+.sub_menu li a:hover{
+	color: #f80;
+}
+
+
+.center_con{
+	width: 1200px;
+	height: 270px;
+	/*background-color: cyan;*/
+	margin: 0 auto;
+}
+
+.center_con .main_menu{
+	width: 200px;
+	height: 270px;
+	/*background-color: gold;*/
+	overflow: hidden;
+}
+
+.center_con .main_menu li{
+	width: 198px;
+	height: 44px;
+	border: 1px solid #eee;
+	margin-top: -1px;
+	background: url(../images/icons.png) 166px -385px no-repeat;
+}
+
+.center_con .main_menu li a{
+	/*下面三句话的意思是为了迷惑用户，使得 > 这个部分也可以被点击，其实也就是扩大a标签的点击范围，造成一种假象*/
+	display: block;
+	width: 198px;
+	height: 44px;
+	
+	font: 14px/44px "Microsoft Yahei";
+	color: #333;
+	text-indent: 71px;
+	background: url(../images/icons.png) 33px 0px no-repeat;
+}
+
+.center_con .main_menu li .fruit{
+	background-position: 33px -90px;
+}
+
+.center_con .main_menu li .sea{
+	background-position: 31px -140px;
+}
+
+.center_con .main_menu li .meat{
+	background-position: 31px -190px;
+}
+
+.center_con .main_menu li .egg{
+	background-position: 33px -239px;
+}
+
+.center_con .main_menu li .vegetable{
+	background-position: 33px -290px;
+}
+
+.center_con .main_menu li .ice{
+	background-position: 33px -338px;
+}
