--- a/1-天天生鲜网页前端设计/css/main.css
+++ b/1-天天生鲜网页前端设计/css/main.css
@@ -476,3 +476,83 @@ body{
 	margin-top: 0px;
 	border-top: 0px;
 }
+
+.form_title{
+	width: 308px;
+	height: 70px;
+	border-bottom: 1px solid #e0e0e0;
+	margin: 0 auto; 
+}
+
+.form_title h1{
+	float: left;
+	height: 70px;
+	font: bold 24px/70px "Microsoft Yahei";
+	color: #a8a8a8;
+	margin-left: 44px;
+}
+
+.form_title a{
+	float: left;
+	width: 100px;
+	height: 16px;
+	font: 16px/16px "Microsoft Yahei";
+	color: #5fb42a;
+	text-indent: 25px;
+	background: url(../images/icons.png) -1px -551px no-repeat;
+	margin: 33px 0 0 36px;
+}
+
+.form_input_con form{
+	width: 308px;
+	height: 221px;
+	margin: 20px auto 0;
+}
+
+.form_input_con form .form_group{
+	width: 308px;
+	height: 68px;
+}
+
+.form_group .input_txt, .form_group .input_pwd{
+	width: 306px;
+	height: 38px;
+	border: 1px solid #e0e0e0;
+	outline: none;
+	background: url(../images/icons.png) 275px -592px no-repeat #f8f8f8;
+	/*为了用户输入时不在输入框内定格写东西，设置一个缩进*/
+	text-indent: 10px;
+}
+
+.form_group .input_pwd{
+	background-position: 275px -642px;
+}
+
+.form_group .error{
+	font: 12px/28px "Microsoft Yahei";
+	color: #ff5400;
+	display: none;
+}
+
+.form_group .input_check{
+	margin: 2px 10px 0 0;
+}
+
+.form_group .find_pass{
+	color: #4b4b4b;
+}
+
+.form_group .find_pass:hover{
+	color: #f80;
+}
+
+.input_sub{
+	width: 308px;
+	height: 40px;
+	background-color: #47aa34;
+	border: 0px;
+	font: 24px/40px "Microsoft Yahei";
+	/*font-size: 24px;*/
+	color: #fff;
+	cursor: pointer;
+}
