--- a/1-天天生鲜移动端rem重构/css/main.css
+++ b/1-天天生鲜移动端rem重构/css/main.css
@@ -12,33 +12,265 @@ body{
 }
 
 .header{
-	height: 50px;
+	height: 2.5rem;
 	background-color: #37ab40;
 	position: relative;
 }
 
+.header .logo{
+	display: block;
+	width: 4.45rem;
+	height: 1.8rem;
+	margin: 0.35rem auto 0;
+}
+
+.header .logo img{
+	width: 100%;
+}
+
+.header .search{
+	position: absolute;
+	width: 1.35rem;
+	height: 1.35rem;
+	right: 0.75rem;
+	top: 0.625rem;
+	background: url(../images/icons.png) left top no-repeat;
+	background-size: 3rem 42rem;
+}
 
 .center_wrap{
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: 50px;
-	bottom: 50px;
-	background-color: #efefef;
-	/*这个地方是你平常浏览网页出现滑动条的关键，
-	如何保障你在滑动手机时顶栏和低栏都在，只有中间部分在滑动，就可以用这种结构；*/
+	top: 2.5rem;
+	bottom: 2.5rem;
 	overflow-x: hidden;
 	overflow-y: auto;
+	background-color: #efefef;
+}
+
+.slide img{
+	width: 100%;
+}
+
+.menu_con{
+	height: 9.25rem;
+	background-color: #fff;
+	margin-top: 0.5rem;
+	overflow: hidden;
 }
 
 
+.menu{
+	width: 19rem;
+	height: 8.1rem;
+	margin: 0.7rem 0 0 1.375rem;
+}
+
+.menu li{
+	width: 2.8rem;
+	height: 4.1rem;
+	float: left;
+	margin-right: 1.625rem;
+}
+
+.menu li a{
+	display: block;
+	width: 2.8rem;
+	height: 2.8rem;
+	background: url(../images/icons.png) left -3.0rem no-repeat;
+	background-size: 3.0rem 42.0rem;
+}
+
+.menu li h2{
+	height: 1.3rem;
+	/*注意：字体大小不要用rem表示，因为这样做放大有时候会出现锯齿，所以字体大小直接写成px的*/
+	font: 13px/1.3rem "Microsoft Yahei";
+	color: #666;
+	text-align: center;
+}
+
+.menu li:nth-child(2) a{
+	background-position: left -6rem; 
+}
+
+.menu li:nth-child(3) a{
+	background-position: left -9rem; 
+}
+
+.menu li:nth-child(4) a{
+	background-position: left -12rem; 
+}
+
+.menu li:nth-child(5) a{
+	background-position: left -15rem; 
+}
+
+.menu li:nth-child(6) a{
+	background-position: left -18rem; 
+}
+
+.menu li:nth-child(7) a{
+	background-position: left -21rem; 
+}
+
+.menu li:nth-child(8) a{
+	background-position: left -24rem; 
+}
+
+.common_model{
+	background-color: #fff;
+	margin: 0.5rem 0;
+}
+
+.common_title{
+	width: 17.75rem;
+	height: 0.9rem;
+	margin: 0.8rem auto 0;
+}
+
+.common_title h3{
+	border-left: 0.25rem solid #fbc83d;
+	font: bold 15px/0.9rem "Microsoft Yahei";
+	color: #fbc83d;
+	text-indent: 0.4rem;
+}
+
+.common_title a{
+	font: 12px/0.9rem "Microsoft Yahei";
+	color: #7f7f7f;
+}
+
+.banner{
+	width: 17.75rem;
+	height: 4.5rem;
+	margin: 0.5rem auto 0;
+}
+
+.banner img{
+	width: 100%;
+}
+
+.goods_list{
+	width: 17.75rem;
+	height: 9.35rem;
+	margin: 0.5rem auto 0.7rem;
+}
+
+.goods_list li{
+	float: left;
+	width: 5.8rem;
+	height: 9.35rem;
+	border-right: 1px solid #e7e7e7;
+	position: relative;
+}
+
+.goods_list li:last-child{
+	border-right: 0px;
+}
+
+.goods_list li .goods_pic{
+	display: block;
+	width: 4.5rem;
+	height: 4.5rem;
+	margin: 0.5rem auto 0;
+}
+
+.goods_list li .goods_pic img{
+	width: 100%;
+}
+
+.goods_list li .goods_name{
+	width:5.0rem;
+
+	/*这三句可以实现很多网页上一行话太长产生3个小数点的效果*/
+	overflow: hidden; /*超出就隐藏*/
+	white-space: nowrap; /*让文字不换行*/
+	text-overflow: ellipsis; /*文字超出部分显示省略号*/
+
+	font: 15px/15px "Microsoft Yahei";
+	color: #666;
+	margin: 0.75rem auto 0;
+}
+
+.goods_list li .goods_unit{
+	width: 5rem;
+	font: 12px/12px "Microsoft Yahei";
+	color: #bbb;
+	margin: 0.8rem auto 0;
+}
+
+.goods_list li .goods_price{
+	width: 5rem;
+	font: 12px/12px "Microsoft Yahei";
+	color: #ff4400;
+	margin: 0.5rem auto 0;
+}
+
+.goods_list li .add_chart{
+	position: absolute;
+	right: 0.675rem;
+	bottom: 0px;
+	width: 1.7rem;
+	height: 1.7rem;
+	background: url(../images/icons.png) left -27rem no-repeat;
+	background-size: 3.0rem 42.0rem;
+}
+
+/*当最小宽度大于375时*/
+@media (min-width: 375px){
+	.goods_list li .goods_price{
+		font: 14px/14px "Microsoft Yahei";
+	}
+
+	.goods_list li .goods_unit{
+		font: 14px/14px "Microsoft Yahei";	
+	}
+}
 
 .footer{
 	position: absolute;
 	width: 100%;
-	height: 50px;
+	height: 2.5rem;
 	background-color: #fff;
 	left: 0;
 	bottom: 0;
 }
 
+.footer ul{
+	height: 2.5rem;
+}
+
+.footer ul li{
+	width: 25%;
+	height: 2.5rem;
+	float: left;
+}
+
+.footer ul li a{
+	display: block;
+	width: 1.375rem;
+	height: 1.3rem;
+	margin: 0.25rem auto 0;
+	background: url(../images/icons.png) left -30rem no-repeat;
+	background-size: 3.0rem 42.0rem;
+}
+
+.footer ul li:nth-child(2) a{
+	background-position: left -33rem;
+}
+
+.footer ul li:nth-child(3) a{
+	background-position: left -36rem;
+}
+
+.footer ul li:nth-child(4) a{
+	background-position: left -38.95rem;
+}
+
+.footer ul li h2{
+	font: 12px/12px "Microsoft Yahei";
+	color: #949392;
+	text-align: center;
+	margin-top: 0.2rem;
+}
